@@ -3,6 +3,7 @@ Pending changes in the mainline
 
 * Recycling of disk space
 * Protection of patients against recycling (also in Orthanc Explorer)
+* Raw access to the value of the DICOM tags in the REST API
 
 
 Version 0.3.1 (2012/12/05)
